Clarify formatter documentation and terminology (#15)