@@ -3,15 +3,11 @@
 [![Maven Central](https://img.shields.io/maven-central/v/com.netflix/com.netflix.tools.jfmt)](https://central.sonatype.com/artifact/com.netflix/com.netflix.tools.jfmt)
 ![JDK 25+](https://img.shields.io/badge/JDK-25%2B-blue)
 
-`jfmt` formats modern Java source consistently using the [Code Conventions for the Java Programming Language](https://www.oracle.com/java/technologies/javase/codeconventions-introduction.html). Where the language and common practice have evolved, it follows the conventions used in current OpenJDK source.
+`jfmt` formats modern Java source according to the [Code Conventions for the Java Programming Language](https://www.oracle.com/java/technologies/javase/codeconventions-introduction.html), with updates for current Java syntax and OpenJDK practice.
 
-Rather than imposing a fixed line width, `jfmt` combines Java structure with the visual distance between related peers. Horizontal distance is a continuous layout cost, not a maximum: identifier and literal length do not by themselves cause a line break, and indivisible code may remain long. Lists, expressions, and method chains become vertical when the reduction in scanning effort outweighs the fragmentation caused by additional lines.
+It uses 4 spaces for block indentation, 8 spaces for continuation indentation, and places operators at the beginning of continuation lines. It does not impose a maximum length on code lines. Instead, it breaks lists, expressions, and method chains at syntactic boundaries. Long identifiers and literals do not cause a line break by themselves.
 
-- 4-space block indentation and 8-space continuation indentation
-- Breaks before operators
-- File, standard input, and module source path support
-- Import ordering, wildcard expansion, qualified type simplification, and unused import removal
-- Javadoc formatting following the OpenJDK 80-column convention
+Import processing orders imports, removes unused imports, expands wildcards when the required types are available, and shortens unambiguous qualified type names by adding imports. Javadoc prose is formatted to 80 columns. Sources can be supplied as individual files, through standard input, or by module source path.
 
 The formatter is built on [google-java-format](https://github.com/google/google-java-format).
 
@@ -21,49 +17,64 @@ The formatter is built on [google-java-format](https://github.com/google/google-
 ## Installation
 
 > [!NOTE]
-> Netflix engineers should use the internally bundled toolchain rather than installing this tool separately.
+> Netflix engineers should use the internally bundled toolchain rather than installing `jfmt` separately.
 
-Follow the `ja` [Installation Guide](https://github.com/Netflix/ja#installation) to create a `ja`-enabled development JDK. It includes the `jfmt` command and uses it for `ja fmt`.
+### With `ja`
 
-For standalone use, `jar` and `jmod` artifacts for the tool are available on Maven Central.
+Follow the `ja` [Installation Guide](https://github.com/Netflix/ja#installation) to create a `ja`-enabled development JDK. The JDK includes the `jfmt` command, and `ja fmt` uses it when formatting source modules.
+
+### Standalone
+
+Standalone use requires JDK 25 or later. Download the executable JAR from [Maven Central](https://central.sonatype.com/artifact/com.netflix/com.netflix.tools.jfmt). The JAR contains its runtime dependencies:
+
+```sh
+java -jar com.netflix.tools.jfmt-VERSION.jar File.java
+```
+
+JMOD artifacts are also published for building custom runtime images.
 
 ## Format source
 
-Format the source modules selected by the current directory:
+From a `ja` project, format the source modules selected by the current directory:
 
 ```sh
 ja fmt
 ```
 
-Use the standalone command to format files in place:
+To format specific files, pass them to `jfmt`:
 
 ```sh
 jfmt File.java AnotherFile.java
 ```
 
-`jfmt` also orders imports and removes unused imports.
+The command rewrites the files in place. It also orders imports and removes unused imports.
+
+> [!TIP]
+> The examples below use the installed `jfmt` command. When using the standalone JAR, replace `jfmt` with `java -jar com.netflix.tools.jfmt-VERSION.jar`.
 
 ### Check formatting
 
-Check formatting without changing files:
+Use `--check` in CI or before committing to find files that would be changed without rewriting them:
 
 ```sh
 jfmt --check File.java AnotherFile.java
 ```
 
-The command exits non-zero and reports each file that needs formatting.
+The command reports each file that needs formatting and exits with a non-zero status if it finds any.
 
 ### Format standard input
 
-Read UTF-8 source from standard input and write the formatted source to standard output:
+Use `-` to read UTF-8 source from standard input and write the formatted source to standard output:
 
 ```sh
 jfmt -
 ```
 
+This form is useful for editor integration and shell pipelines. It does not perform type-aware import normalization because standard input has no source-path identity.
+
 ### Format modules
 
-Format every Java source file beneath a module source path:
+Use `--module-source-path` to discover and format Java files by module instead of listing each file:
 
 ```sh
 jfmt --module-source-path src
@@ -71,88 +82,112 @@ jfmt --module-source-path 'src/*/main/java'
 jfmt --module-source-path com.example.application=src/application
 ```
 
-`--module-source-path` accepts the same forms as `javac`: a directory containing module directories, a module pattern, or a `module=path` mapping. It can be repeated and combined with explicit files or `--check`.
+The option accepts the same path forms as `javac`:
 
-Select one or more root modules:
+- `src` finds modules in immediate subdirectories of `src`.
+- `'src/*/main/java'` substitutes each module name for `*`. Quote the pattern to prevent the shell from expanding it.
+- `com.example.application=src/application` assigns a source directory to a specific module.
+
+Without `--module`, every module found on the module source path is formatted. Use `-m` or `--module` to select particular modules:
 
 ```sh
 jfmt --module-source-path src -m com.example.application
 jfmt --module-source-path src --module com.example.application,com.example.library
 ```
 
-`-m` and `--module` format only the named modules. Repeating the option replaces the previous selection.
+`--module-source-path` may be repeated and combined with explicit files or `--check`. A later `-m` or `--module` option replaces an earlier module selection.
 
-### Semantic import normalization
+### Normalize imports
 
-For files with satisfiable module requirements, `jfmt` enters source declarations into javac's symbol table to expand wildcard imports and replace unambiguous qualified type references with explicit imports. Source files passed in one invocation are entered together, so their declarations are visible to one another. This does not attribute method bodies or reject unrelated compilation errors.
+Import processing can also:
 
-If a named module has requirements that cannot be satisfied by the supplied compile-time module path, `jfmt` performs syntax-only formatting for that module and leaves wildcard and qualified references intact. Other satisfiable modules still receive semantic import normalization.
+- replace a wildcard import with imports for the types the source actually uses;
+- shorten a fully qualified type name by adding an import, provided the shorter name is unambiguous.
 
-The standalone command accepts javac context options including `--class-path`, `--module-path`, `--upgrade-module-path`, `--source-path`, `--module-source-path`, `--system`, `--add-modules`, `--limit-modules`, `--add-exports`, `--add-reads`, `--patch-module`, `--release`, `--source`, and `--enable-preview`, along with their standard short aliases. Standard-input formatting is syntax-only because it has no source-path identity.
+For example:
 
-### Run the standalone JAR
+```java
+import java.util.*;
 
-The JAR contains its runtime dependencies:
+class Example {
+    java.time.Duration timeout;
+    List<String> names;
+}
+```
+
+becomes:
+
+```java
+import java.time.Duration;
+import java.util.List;
+
+class Example {
+    Duration timeout;
+    List<String> names;
+}
+```
+
+Type names are resolved with `javac` before making these changes. This prevents an import from being added when it conflicts with another declaration or import. Pass related source files in the same invocation so their declarations are available to one another:
 
 ```sh
-java -jar jfmt.jar File.java
+jfmt dependency/Widget.java application/Example.java
 ```
+
+Use the same class path or module path as the build so `jfmt` can resolve referenced types:
+
+```sh
+jfmt --class-path build/classes application/Example.java
+jfmt --module-path modules --module-source-path src
+```
+
+Other `javac` options that affect type resolution are also supported. Run `jfmt --help` for the complete list.
+
+Method bodies are not compiled as part of type resolution. A missing type needed to resolve a declaration causes the command to fail before changing any files, but unrelated errors inside method bodies do not prevent formatting.
+
+If the requirements of a named module are unavailable on the supplied module path, the module is still formatted, but its wildcard imports and qualified type names are left unchanged. Other modules whose requirements are available still receive type-aware import normalization.
 
 ## Style
 
-`jfmt` applies a fixed style without project-specific configuration. Formatting decisions use Java structure and relative visual cost rather than a fixed number of characters on a line.
+The formatter has one built-in style and does not read project-specific formatting configuration.
 
-| Setting | Value |
-|---------|-------|
-| Block indent | 4 spaces |
-| Continuation indent | 8 spaces |
-| Code line limit | No hard limit; horizontal distance contributes to layout |
-| Javadoc width | 80 columns |
-| Import order | `import module`, `java.*`, `javax.*`, third-party, then `static` |
-| Operators | Break before the operator |
-| Braces | Required around non-empty control statement bodies; same line as the declaration |
+| Setting | Behavior |
+|---------|----------|
+| Block indentation | 4 spaces |
+| Continuation indentation | 8 spaces |
+| Code lines | No fixed maximum length; breaks are based on Java syntax |
+| Javadoc | Wrapped to 80 columns |
+| Imports | `import module`, `java.*` and `javax.*`, third-party, then `static` |
+| Operators | Placed at the beginning of a continuation line |
+| Control statement braces | Required around non-empty bodies |
+| Opening braces | Kept on the same line as the declaration or control statement |
 
-Comments separating import groups are retained with their groups. These groups keep their authored order so comments are not detached from the imports they describe.
+Comments that divide imports into groups remain attached to their groups. When such comments are present, `jfmt` preserves the authored order of the groups rather than moving imports away from the comments that describe them.
 
 ### Structural line breaks
 
-Identifier and literal length do not by themselves cause a line break:
+A fixed line-length limit cannot distinguish a long name from an expression containing many separate parts. Line breaks are instead inserted at boundaries in Java syntax. This keeps the parts of calls, expressions, and method chains from becoming widely separated without breaking merely because an identifier or literal is long.
+
+A long identifier can therefore remain on one line:
 
 ```java
 return configurationResolver.resolveInheritedApplicationConfiguration(applicationEnvironment);
 ```
 
-Calls, expressions, and chains break as their combined Java structure accumulates. Structure is carried across nested expressions, not considered independently at each pair of parentheses:
+As an expression gains nested calls, operators, or chain elements, continuation lines expose those boundaries:
 
 ```java
 downstream.push(SharedSecrets.getJavaUtilCollectionAccess()
         .listFromTrustedArrayNullsAllowed(window));
 ```
 
-Lists have flat, wrapped, and broken candidate layouts. Structural analysis establishes the baseline layout, while relative visual cost can promote it or relocate its single continuation break. Wrapped lists take one higher-level separator break:
+A list may remain on one line, continue onto a second line, or place each element on its own line. A single continuation is used when one break is enough:
 
 ```java
 invoke(one, two, three, four, five, six,
         seven);
 ```
 
-When otherwise single-line elements fill two structural rows, the call uses a broken list instead of packing multiple continuation rows. Array initializers follow the same rule, and their element structure contributes to enclosing expressions even while the initializer remains flat. Child layouts contribute to their enclosing lists: broken children propagate, while wrapped children consume a structural row so the higher-level expression gets the first opportunity to break.
-
-Lists compare flat, single-continuation, and broken candidate layouts. Keeping siblings on the same row incurs a continuous scanning cost based on their distance and immediate structure; taking or relocating a break incurs a fragmentation cost. There is no column cliff, and the length of a final or solitary element adds no scanning cost because breaking cannot shorten it.
-
-The formatter chooses the minimum decomposition that exposes the top-level structure. An enclosing break owns that decomposition, so optional child wrapping is removed when the parent break already separates distant peers. It does not recursively expand every nested call to compensate for code that may be clearer after refactoring.
-
-```java
-int result = new CommandRunner(ModuleLayer.boot(), tools, new ToolCatalog(List.of()), () -> null)
-        .run(commandLine, InputStream.nullInputStream(), new PrintStream(new ByteArrayOutputStream()),
-                new PrintStream(new ByteArrayOutputStream()));
-```
-
-```java
-assertEquals(
-        List.of("--module-path", "/path with spaces", "--add-modules", "a,b", "#value"),
-        ArgumentFiles.parse(argumentFile));
-```
+Longer or more structured lists may use one element per line:
 
 ```java
 ToolDefinition formatter = new ToolDefinition(
@@ -166,58 +201,48 @@ ToolDefinition formatter = new ToolDefinition(
         List.of());
 ```
 
-Parameter declarations are weighted more heavily than arguments. They retain the conventional two-row wrapped form and switch to a broken parameter list rather than wrapping onto a third row.
+For nested calls, the outer arguments are separated first. Nested lists do not become vertical merely because the enclosing call breaks:
 
-Continuation lines align with the first item when that keeps related code together:
+```java
+assertEquals(
+        List.of("--module-path", "/path with spaces", "--add-modules", "a,b", "#value"),
+        ArgumentFiles.parse(argumentFile));
+```
+
+Continuation lines in declarations align with the first parameter when that alignment remains practical:
 
 ```java
 static void someMethod(int anArgument, Object anotherArgument, String yetAnotherArgument,
                        Object andStillAnotherArgument) {}
 ```
 
-When alignment would move the continuation too far to the right, it falls back to the 8-space continuation indent:
+When the first parameter is too far to the right, continuation lines use the standard 8-space continuation indentation:
 
 ```java
 static <A, B> G<A, B> extraordinarilyLongMethodName(F<A, B> first,
         H<A, I<B>> second) {}
 ```
 
-The same layout model applies to declarations, calls, expressions, method chains, lambdas, and modern Java constructs.
-
 ### Control statement braces
 
-Non-empty control statement bodies use braces, including `return`, `throw`, `break`, `continue`, loop, expression, and `if`/`else` bodies. This follows the Sun convention even when a body contains only one statement.
+Braces are added around non-empty `if`, `else`, `for`, `while`, and `do` bodies, even when the body contains only one statement:
+
+```java
+if (ready) {
+    start();
+}
+```
+
+This follows the Java code conventions, makes the extent of the controlled body explicit, and prevents a newly added statement from accidentally falling outside it. Empty statement bodies and `else if` chains are left in their conventional forms.
 
 ### Comments
 
-Javadoc prose follows the OpenJDK 80-column convention. Existing wrapping is retained when it remains readable, and words and inline tags such as `{@link}` stay intact.
+Javadoc prose is wrapped to 80 columns. Existing wrapping that already fits is preserved, as are words, inline tags such as `{@link}`, and preformatted content. These elements may extend beyond column 80.
 
-Line comments and block comments retain their authored line breaks rather than being reflowed to a particular width.
-
-## Build and test
-
-Building `jfmt` requires a `ja`-enabled JDK 25 or later. Run the test suite from the repository root:
-
-```sh
-ja test
-```
-
-`ja` compiles the source modules as needed.
-
-The production module is in `src/com.netflix.tools.jfmt/classes`. Its JMOD legal content is in `src/com.netflix.tools.jfmt/legal`.
-
-## Publish
-
-Export a local Maven repository containing the modular JAR and platform JMODs:
-
-```sh
-ja maven publish --jmod --module-version 1.2.3 repository
-```
-
-Release automation validates and uploads the exported repository.
+Line and block comments are not reflowed, preserving deliberately arranged lists, diagrams, or code.
 
 ## Origin and license
 
-`jfmt` incorporates and adapts [google-java-format](https://github.com/google/google-java-format), Copyright 2015 Google Inc. Integrated dependencies are relocated beneath `com.netflix.tools.jfmt.internal` to avoid conflicts with application modules. [`INTERNAL.md`](src/com.netflix.tools.jfmt/INTERNAL.md) records their versions and provenance.
+The formatter incorporates and adapts [google-java-format](https://github.com/google/google-java-format), Copyright 2015 Google Inc. Integrated dependencies are relocated beneath `com.netflix.tools.jfmt.internal` to prevent conflicts with application modules. [`INTERNAL.md`](src/com.netflix.tools.jfmt/INTERNAL.md) records their versions and provenance.
 
-`jfmt` and its modifications are licensed under the [Apache License 2.0](LICENSE). Third-party components retain their own licenses, as recorded in [NOTICE](NOTICE).
+The project is licensed under the [Apache License 2.0](LICENSE). Third-party components retain the licenses recorded in [NOTICE](NOTICE).
